add relative option

--- a/example/index.html
+++ b/example/index.html
@@ -19,18 +19,18 @@
 
   <div class="page">
 
-    <header class="parallux-container header">
+    <header class="parallux-container header" data-parallux-relative="false">
 
-        <h1 class="parallux-item" data-parallux-ratio="-0.4">Parallux</h1>
+        <h1 class="parallux-item" data-parallux-ratio="-0.6">Parallux</h1>
         <div class="block">
-        <p class="parallux-item" data-parallux-ratio="-0.3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quis vero commodi voluptates assumenda minima nesciunt pariatur deserunt harum expedita, optio cupiditate temporibus sit itaque, at illo quibusdam repellendus labore.</p>
+        <p class="parallux-item" data-parallux-ratio="-0.4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quis vero commodi voluptates assumenda minima nesciunt pariatur deserunt harum expedita, optio cupiditate temporibus sit itaque, at illo quibusdam repellendus labore.</p>
       </div>
     </header>
 
-    <section class="parallux-container blue" data-parallux-pov="0.5">
+    <section class="parallux-container blue" data-parallux-pov="0">
       <div class="block">
         <div class="left">
-          <div class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0.2,"to":0.8}}'>
+          <div class="parallux-item" data-parallux-ratio="0.05" data-parallux-attr='{"opacity":{"from":0.2,"to":0.8}}'>
             <img src="http://lorempixel.com/480/320/" alt="">
             </div>
             <br>
@@ -40,9 +40,10 @@
         </div>
         <div class="right">
           <article>
-            <h1 class="parallux-item" data-parallux-ratio="0.3" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem Ipsum</h1>
-            <p class="parallux-item" data-parallux-ratio="0.5" data-parallux-ratio-up="0.33">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
-            <p class="parallux-item" data-parallux-ratio="0.8" data-parallux-ratio-up="0.36">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <h1 class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem Ipsum</h1>
+
+            <p class="parallux-item" data-parallux-ratio="0.2" data-parallux-ratio-up="0.1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
           </article>
         </div>
       </div>
@@ -54,18 +55,18 @@
     <div class="left">
       <!-- data-parallux-attr='{"lineHeight":{"from":4,"to":1.44}}' -->
 
-        <p class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis minus iusto magnam, eum? Magnam nihil cum illo, beatae quisquam sequi quos atque ea, minus dignissimos fugiat, nesciunt pariatur mollitia provident.</p>
-        <p class="parallux-item" data-parallux-ratio="0.4" data-parallux-ratio-up="0.12" data-parallux-attr='{"opacity":{"from":0.2,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat voluptatem est aliquam, ipsa eum saepe at nemo nobis harum provident, amet vero consequuntur architecto eius accusantium porro dicta recusandae quidem!</p>
-        <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.14">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit fuga neque minus. Blanditiis vitae, maiores totam itaque odit sint nesciunt facere delectus excepturi amet nam magnam tempora labore, ducimus assumenda.</p>
+        <p class="parallux-item" data-parallux-ratio="0.1" data-parallux-ratio-up="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis minus iusto magnam, eum? Magnam nihil cum illo, beatae quisquam sequi quos atque ea, minus dignissimos fugiat, nesciunt pariatur mollitia provident.</p>
+        <p class="parallux-item" data-parallux-ratio="0.4" data-parallux-ratio-up="0.12" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat voluptatem est aliquam, ipsa eum saepe at nemo nobis harum provident, amet vero consequuntur architecto eius accusantium porro dicta recusandae quidem!</p>
+        <p class="parallux-item" data-parallux-ratio="0.8" data-parallux-ratio-up="0.13">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit fuga neque minus. Blanditiis vitae, maiores totam itaque odit sint nesciunt facere delectus excepturi amet nam magnam tempora labore, ducimus assumenda.</p>
 
       </div>
       <div class="right">
 
       <h1 class="parallux-item" data-parallux-ratio="0.6" data-parallux-attr='{"transform":{"translateZ" : {"from":-200,"to":0, "unit":"px"}}}'>Lorem Ipsum</h1>
-      <div class="parallux-item" data-parallux-ratio="0.65" data-parallux-ratio-up="0.33"  data-parallux-attr='{"transform":{"rotate" : {"from":20,"to":0, "unit":"deg"}, "translateZ" : {"from":-320, "unit":"px"}}}'>
+      <div class="parallux-item" data-parallux-ratio="0.65"  data-parallux-attr='{"transform":{"rotate" : {"from":20,"to":0, "unit":"deg"}, "translateZ" : {"from":-320, "unit":"px"}}}'>
         <img src="http://lorempixel.com/800/460/" alt="">
       </div>
-      <div class="parallux-item" data-parallux-ratio="0.69" data-parallux-ratio-up="0.33" >
+      <div class="parallux-item" data-parallux-ratio="0.69"  >
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea ad vero exercitationem, sit maiores ipsa nam doloribus quae similique alias voluptas itaque quidem, culpa debitis modi eius, rerum. Hic!</p>
        </div>
         </div>
@@ -85,8 +86,9 @@
       <div class="left">
         <article>
           <h1 class="parallux-item" data-parallux-ratio="0.1">Lorem Ipsum</h1>
-          <p class="parallux-item" data-parallux-ratio="0.15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-          <p class="parallux-item" data-parallux-ratio="0.2" data-parallux-ratio-up="0.1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+          <img class="parallux-item" src="http://lorempixel.com/480/321/" alt="" data-parallux-ratio="0.3">
+          <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+          <p class="parallux-item" data-parallux-ratio="0.352" data-parallux-ratio-up="0.1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
         </article>
         </div>
       </div>
