--- a/example/index.html
+++ b/example/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
 
-    <section class="parallux-container blue" data-parallux-pov="1.2">
+    <section class="parallux-container blue" data-parallux-pov="0.5">
       <div class="block">
         <div class="left">
           <div class="parallux-item" data-parallux-ratio="0.05" data-parallux-attr='{"opacity":{"from":0.2,"to":0.8}}'>
@@ -87,28 +87,27 @@
         <article>
           <h1 class="parallux-item" data-parallux-ratio="0.1">Lorem Ipsum</h1>
           <img class="parallux-item" src="http://lorempixel.com/480/321/" alt="" data-parallux-ratio="0.3">
-          <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-          <p class="parallux-item" data-parallux-ratio="0.352" data-parallux-ratio-up="0.1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+          <p class="parallux-item" data-parallux-ratio="0.32" data-parallux-ratio-up="0.15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+          <p class="parallux-item" data-parallux-ratio="0.34" data-parallux-ratio-up="0.1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
         </article>
         </div>
       </div>
 
     </section>
-    <footer class="parallux-container block">
+    <footer class="parallux-container block" data-parallux-pov="0">
 
       <p class="parallux-item" data-parallux-ratio="0.1" data-parallux-ratio-up="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.9,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo modi deleniti molestias, iste, eum esse. Pariatur quis suscipit tempore, facilis vero incidunt laboriosam quibusdam, quam, possimus animi modi earum aspernatur.</p>
-      <p class="parallux-item" data-parallux-ratio="0.3" data-parallux-ratio-up="0.12" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.8,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus sunt, possimus tempora atque officia itaque quibusdam amet sapiente laboriosam hic libero quos voluptatibus aperiam corporis, nisi a delectus alias. Consequatur!</p>
-      <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.13" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.7,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, hic doloribus dolorem veniam praesentium possimus officiis cum distinctio eius, ipsam aliquid recusandae, magnam vel quidem nesciunt pariatur! Perferendis, natus, impedit.</p>
-      <p class="parallux-item" data-parallux-ratio="0.8" data-parallux-ratio-up="0.14" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.6,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut rerum, fugit. Quae odio autem, voluptatum! Aspernatur deleniti, quia et officia quo, quidem libero praesentium rerum velit facere deserunt perferendis accusantium?</p>
-      <p class="parallux-item" data-parallux-ratio="1" data-parallux-ratio-up="0.15" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.5,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
-      <p class="parallux-item" data-parallux-ratio="1.2" data-parallux-ratio-up="0.16" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.6,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
-      <p class="parallux-item" data-parallux-ratio="1.4" data-parallux-ratio-up="0.17" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.7,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
-      <p class="parallux-item" data-parallux-ratio="1.6" data-parallux-ratio-up="0.18" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.8,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
-      <p class="parallux-item" data-parallux-ratio="1.8" data-parallux-ratio-up="0.19" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.9,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
+      <p class="parallux-item" data-parallux-ratio="0.2" data-parallux-ratio-up="0.12" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.8,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus sunt, possimus tempora atque officia itaque quibusdam amet sapiente laboriosam hic libero quos voluptatibus aperiam corporis, nisi a delectus alias. Consequatur!</p>
+      <p class="parallux-item" data-parallux-ratio="0.3" data-parallux-ratio-up="0.13" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.7,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, hic doloribus dolorem veniam praesentium possimus officiis cum distinctio eius, ipsam aliquid recusandae, magnam vel quidem nesciunt pariatur! Perferendis, natus, impedit.</p>
+      <p class="parallux-item" data-parallux-ratio="0.4" data-parallux-ratio-up="0.14" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.6,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut rerum, fugit. Quae odio autem, voluptatum! Aspernatur deleniti, quia et officia quo, quidem libero praesentium rerum velit facere deserunt perferendis accusantium?</p>
+      <p class="parallux-item" data-parallux-ratio="0.5" data-parallux-ratio-up="0.15" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.5,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
+      <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.16" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.6,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
+      <p class="parallux-item" data-parallux-ratio="0.7" data-parallux-ratio-up="0.17" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.7,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
+      <p class="parallux-item" data-parallux-ratio="0.8" data-parallux-ratio-up="0.18" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.8,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
+      <p class="parallux-item" data-parallux-ratio="0.9" data-parallux-ratio-up="0.19" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.9,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem aliquid praesentium cumque sit vero, ducimus atque et. Atque voluptate, dicta nihil obcaecati quo iusto aliquam nam perferendis nemo illum.</p>
 
     </footer>
 
-    <div style="height:20%"></div>
   </div>
   <script src="../dist/parallux.min.js"></script>
   <script>
