--- a/example/index.html
+++ b/example/index.html
@@ -19,15 +19,14 @@
 
   <div class="page">
 
-    <header class="parallux-container header" data-parallux-relative="false">
-
+    <header class="parallux-container header">
         <h1 class="parallux-item" data-parallux-ratio="-0.6">Parallux</h1>
         <div class="block">
         <p class="parallux-item" data-parallux-ratio="-0.4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quis vero commodi voluptates assumenda minima nesciunt pariatur deserunt harum expedita, optio cupiditate temporibus sit itaque, at illo quibusdam repellendus labore.</p>
       </div>
     </header>
 
-    <section class="parallux-container blue" data-parallux-pov="0.5">
+    <section class="parallux-container blue" data-parallux-pov="0.5" data-parallux-relative="true">
       <div class="block">
         <div class="left">
           <div class="parallux-item" data-parallux-ratio="0.05" data-parallux-attr='{"opacity":{"from":0.2,"to":0.8}}'>
@@ -50,7 +49,7 @@
     </section>
 
 
-    <section class="parallux-container  orange">
+    <section class="parallux-container orange">
     <div class="block">
     <div class="left">
       <!-- data-parallux-attr='{"lineHeight":{"from":4,"to":1.44}}' -->
@@ -73,7 +72,7 @@
       </div>
     </section>
 
-    <section class="parallux-container  dark">
+    <section class="parallux-container  dark" data-parallux-relative="true">
       <div class="block">
       <div class="right">
         <div class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{ "translateZ" : {"from":100, "unit":"px"}, "rotateY" : {"from":180, "unit":"deg"}}}'>
@@ -94,7 +93,7 @@
       </div>
 
     </section>
-    <footer class="parallux-container block" data-parallux-pov="0">
+    <footer class="parallux-container block" data-parallux-pov="0" data-parallux-relative="true">
 
       <p class="parallux-item" data-parallux-ratio="0.1" data-parallux-ratio-up="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.9,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo modi deleniti molestias, iste, eum esse. Pariatur quis suscipit tempore, facilis vero incidunt laboriosam quibusdam, quam, possimus animi modi earum aspernatur.</p>
       <p class="parallux-item" data-parallux-ratio="0.2" data-parallux-ratio-up="0.12" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.8,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus sunt, possimus tempora atque officia itaque quibusdam amet sapiente laboriosam hic libero quos voluptatibus aperiam corporis, nisi a delectus alias. Consequatur!</p>
