optimize init process

--- a/example/index.html
+++ b/example/index.html
@@ -20,7 +20,9 @@
   <div class="page">
 
     <header class="parallux-container header">
-        <h1 class="parallux-item" data-parallux-ratio="-0.6">Parallux</h1>
+        <div class="parallux-item" data-parallux-ratio="-0.6">
+          <h1>Parallux</h1>
+        </div>
         <div class="block">
         <p class="parallux-item" data-parallux-ratio="-0.4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quis vero commodi voluptates assumenda minima nesciunt pariatur deserunt harum expedita, optio cupiditate temporibus sit itaque, at illo quibusdam repellendus labore.</p>
       </div>
