add offset option && set pov default to 0

--- a/example/index.html
+++ b/example/index.html
@@ -18,17 +18,19 @@
   </div>
 
   <div class="page">
-
-    <header class="parallux-container header">
+    <div style="height:40px; background-color: black;"></div>
+    <header class="parallux-container header" data-parallux-pov="0" data-parallux-offset="-40">
         <div class="parallux-item" data-parallux-ratio="-0.6">
           <h1>Parallux</h1>
         </div>
         <div class="block">
         <p class="parallux-item" data-parallux-ratio="-0.4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quis vero commodi voluptates assumenda minima nesciunt pariatur deserunt harum expedita, optio cupiditate temporibus sit itaque, at illo quibusdam repellendus labore.</p>
       </div>
+
+      <div style="height:40px; width: 100%; background-color: black; position: absolute; bottom: 0; left: 0"></div>
     </header>
 
-    <section class="parallux-container blue" data-parallux-pov="0.5" data-parallux-relative="true">
+    <section class="parallux-container blue" data-parallux-offset="0" data-parallux-pov="1" data-parallux-relative="true">
       <div class="block">
         <div class="left">
           <div class="parallux-item" data-parallux-ratio="0.05" data-parallux-attr='{"opacity":{"from":0.2,"to":0.8}}'>
