--- a/example/index.html
+++ b/example/index.html
@@ -19,7 +19,7 @@
 
   <div class="page">
     <div style="height:40px; background-color: black;"></div>
-    <header class="parallux-container header" data-parallux-pov="0" data-parallux-offset="-40">
+    <header class="parallux-container header" data-parallux-pov="0" data-parallux-round="false" data-parallux-offset="-40">
         <div class="parallux-item" data-parallux-ratio="-0.6">
           <h1>Parallux</h1>
         </div>
@@ -30,7 +30,7 @@
       <div style="height:40px; width: 100%; background-color: black; position: absolute; bottom: 0; left: 0"></div>
     </header>
 
-    <section class="parallux-container blue" data-parallux-offset="0" data-parallux-pov="1" data-parallux-relative="true">
+    <section class="parallux-container blue" data-parallux-offset="0" data-parallux-pov="0.5" data-parallux-relative="true">
       <div class="block">
         <div class="left">
           <div class="parallux-item" data-parallux-ratio="0.05" data-parallux-attr='{"opacity":{"from":0.2,"to":0.8}}'>
@@ -45,15 +45,15 @@
           <article>
             <h1 class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem Ipsum</h1>
 
-            <p class="parallux-item" data-parallux-ratio="0.3" data-parallux-ratio-up="0.1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
-            <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0.11">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <p class="parallux-item" data-parallux-ratio="0.3" data-parallux-ratio-up="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
           </article>
         </div>
       </div>
     </section>
 
 
-    <section class="parallux-container orange">
+    <section class="parallux-container orange" data-parallux-relative="true" data-parallux-pov="0.5">
     <div class="block">
     <div class="left">
       <!-- data-parallux-attr='{"lineHeight":{"from":4,"to":1.44}}' -->
@@ -97,7 +97,7 @@
       </div>
 
     </section>
-    <footer class="parallux-container block" data-parallux-pov="0" data-parallux-relative="true">
+    <footer class="parallux-container block" data-parallux-pov="0.5" data-parallux-relative="false">
 
       <p class="parallux-item" data-parallux-ratio="0.1" data-parallux-ratio-up="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.9,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo modi deleniti molestias, iste, eum esse. Pariatur quis suscipit tempore, facilis vero incidunt laboriosam quibusdam, quam, possimus animi modi earum aspernatur.</p>
       <p class="parallux-item" data-parallux-ratio="0.2" data-parallux-ratio-up="0.12" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.8,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus sunt, possimus tempora atque officia itaque quibusdam amet sapiente laboriosam hic libero quos voluptatibus aperiam corporis, nisi a delectus alias. Consequatur!</p>
