--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <div class="parallux-container fixed">
+  <div class="parallux-container-- fixed">
     <div class="parallux-item background-1" data-parallux-ratio="0.3" ></div>
     <div class="parallux-item background-2" data-parallux-ratio="0.2" ></div>
     <div class="parallux-item background-3" data-parallux-ratio="0.1" ></div>
@@ -19,21 +19,21 @@
 
   <div class="page">
     <div style="height:40px; background-color: black;"></div>
-    <header class="parallux-container header" data-parallux-pov="0" data-parallux-round="false" data-parallux-offset="-40">
-        <div class="parallux-item" data-parallux-ratio="-0.6">
+    <header class="parallux-container header" data-parallux-pov="0" data-parallux-offset="-40" >
+        <div class="parallux-item" data-parallux-ratio="-0.7">
           <h1>Parallux</h1>
         </div>
-        <div class="block">
-        <p class="parallux-item" data-parallux-ratio="-0.4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quis vero commodi voluptates assumenda minima nesciunt pariatur deserunt harum expedita, optio cupiditate temporibus sit itaque, at illo quibusdam repellendus labore.</p>
-      </div>
+        <div class="block parallux-item" data-parallux-ratio="-0.6">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quis vero commodi voluptates assumenda minima nesciunt pariatur deserunt harum expedita, optio cupiditate temporibus sit itaque, at illo quibusdam repellendus labore.</p>
+       </div>
 
       <div style="height:40px; width: 100%; background-color: black; position: absolute; bottom: 0; left: 0"></div>
     </header>
 
-    <section class="parallux-container blue" data-parallux-offset="0" data-parallux-pov="0.5" data-parallux-relative="true">
+    <section class="parallux-container blue" data-parallux-offset="0" data-parallux-pov="0" data-parallux-relative="false">
       <div class="block">
         <div class="left">
-          <div class="parallux-item" data-parallux-ratio="0.05" data-parallux-attr='{"opacity":{"from":0.2,"to":0.8}}'>
+          <div class="parallux-item" data-parallux-ratio="0.05" data-parallux-attr='{"opacity":{"from":0.1,"to":1}}'>
             <img src="http://lorempixel.com/480/320/" alt="">
             </div>
             <br>
@@ -43,17 +43,17 @@
         </div>
         <div class="right">
           <article>
-            <h1 class="parallux-item" data-parallux-ratio="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem Ipsum</h1>
+            <h1 class="parallux-item" data-parallux-ratio="0.1" data-parallux-ratio-up="0" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem Ipsum</h1>
 
             <p class="parallux-item" data-parallux-ratio="0.3" data-parallux-ratio-up="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
-            <p class="parallux-item" data-parallux-ratio="0.6" data-parallux-ratio-up="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <p class="parallux-item" data-parallux-ratio="0.4" data-parallux-ratio-up="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
           </article>
         </div>
       </div>
     </section>
 
 
-    <section class="parallux-container orange" data-parallux-relative="true" data-parallux-pov="0.5">
+    <section class="parallux-container orange" data-parallux-relative="true">
     <div class="block">
     <div class="left">
       <!-- data-parallux-attr='{"lineHeight":{"from":4,"to":1.44}}' -->
@@ -97,7 +97,7 @@
       </div>
 
     </section>
-    <footer class="parallux-container block" data-parallux-pov="0.5" data-parallux-relative="false">
+    <footer class="parallux-container block" data-parallux-pov="0" data-parallux-relative="false">
 
       <p class="parallux-item" data-parallux-ratio="0.1" data-parallux-ratio-up="0.1" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.9,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo modi deleniti molestias, iste, eum esse. Pariatur quis suscipit tempore, facilis vero incidunt laboriosam quibusdam, quam, possimus animi modi earum aspernatur.</p>
       <p class="parallux-item" data-parallux-ratio="0.2" data-parallux-ratio-up="0.12" data-parallux-attr='{"opacity":{"from":0,"to":1}, "transform":{"scale": {"from":0.8,"to":1}}}'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus sunt, possimus tempora atque officia itaque quibusdam amet sapiente laboriosam hic libero quos voluptatibus aperiam corporis, nisi a delectus alias. Consequatur!</p>
