--- a/example/index.html
+++ b/example/index.html
@@ -30,7 +30,7 @@
       <div style="height:40px; width: 100%; background-color: black; position: absolute; bottom: 0; left: 0"></div>
     </header>
 
-    <section class="parallux-container blue" data-parallux-offset="0" data-parallux-pov="0" data-parallux-relative="false">
+    <section id="blue" class="parallux-container blue" data-parallux-offset="0" data-parallux-pov="0.5" data-parallux-relative="false">
       <div class="block">
         <div class="left">
           <div class="parallux-item" data-parallux-ratio="0.05" data-parallux-attr='{"opacity":{"from":0.1,"to":1}}'>
@@ -46,7 +46,7 @@
             <h1 class="parallux-item" data-parallux-ratio="0.1" data-parallux-ratio-up="0" data-parallux-attr='{"opacity":{"from":0,"to":1}}'>Lorem Ipsum</h1>
 
             <p class="parallux-item" data-parallux-ratio="0.3" data-parallux-ratio-up="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
-            <p class="parallux-item" data-parallux-ratio="0.4" data-parallux-ratio-up="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <p class="parallux-item" data-parallux-ratio="0.4"  data-parallux-offset="40" data-parallux-ratio-up="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
           </article>
         </div>
       </div>
