--- a/example/index.html
+++ b/example/index.html
@@ -19,8 +19,8 @@
 
   <div class="page">
     <div style="height:40px; background-color: black;"></div>
-    <header class="parallux-container header" data-parallux-pov="0.5" data-parallux-offset="-40" >
-        <div class="parallux-item" data-parallux-ratio="-0.7">
+    <header class="parallux-container header" data-parallux-pov="0.5" data-parallux-offset="0" >
+        <div class="parallux-item" data-parallux-ratio="-0.7" data-parallux-max="0">
           <h1>Parallux</h1>
         </div>
         <div class="block parallux-item" data-parallux-ratio="-0.6">
